refactor: update to sdk v4